<resources>
    <string name="app_name">AD340_Project</string>
    <string name="name">Mike Gilson</string>
    <string name="details">Fun Facts:</string>
    <string name="deets1">&#8226; Previous QA/Program Mgmt experience in the Tech Industry</string>
    <string name="deets2">&#8226; Encyclopedic knowledge of 80s/90s cartoon theme songs</string>
    <string name="deets3">&#8226; Avid scifi/fantasy nerd</string>
    <string name="deets4">&#8226; Has become quite the desserts baker during Covid Times</string>
    <string name="enter_name">enter username</string>
    <string name="info_button">LOGIN</string>
    <string name="gButton1">MOVIES</string>
    <string name="gButton2">TRAFFIC CAMS</string>
    <string name="gButton3">TRAFFIC CAM MAP</string>
    <string name="gButton4">Chewie</string>
    <string name="gButton5">R2-D2</string>
    <string name="gButton6">C-3P0</string>
    <string name="showLuke">Luke Skywalker</string>
    <string name="locHeader">Location:</string>
    <string name="email">enter email</string>
    <string name="password">enter password</string>
</resources>